--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "georadio",
+  "name": "goRadio",
   "version": "0.0.1",
   "description": "geolocation radio project",
   "main": "server.js",
@@ -10,6 +10,13 @@
   "author": "Booyanach",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.12.3"
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.12.3",
+    "express": "^4.12.3",
+    "express-session": "^1.11.1",
+    "mongoose": "^4.0.2",
+    "passport": "^0.2.1",
+    "passport-http": "^0.2.2",
+    "passport-local": "^1.0.0"
   }
 }
